add all layouts

--- a/main-join-us.partial.html
+++ b/main-join-us.partial.html
@@ -3,7 +3,7 @@
         <div class="join-us__content">
             <p class="join-us__content-annotation annotation">JOIN</p>
             <h2 class="join-us__content-title">Yoga for Beginners</h2>
-            <p class="join-us__content-subtitle">Join our classes for Level 1.</p>
+            <p class="join-us__content-subtitle subtitle">Join our classes for Level 1.</p>
             <p class="join-us__content-text">
                 Explore yoga during our beginner classes! Coaches will
                 tell you more about yoga and teach you the basic things:
@@ -11,17 +11,21 @@
             <ul class="join-us__content-list content-list">
                 <li class="content-list__item">
                     <svg class="content-list__item-image">
-                        <use href="img/lotus-icon.svg#lotus-icon"></use>
+                        <use href="img/lotus-list.svg#lotus-icon"></use>
                     </svg>
-                    Basic poses;
+                    <p class="content-list__item-text">Basic poses;</p>
                 </li>
                 <li class="content-list__item">
-                    <img class="content-list__item-image" src="img/lotus-icon.svg" alt="lotus icon">
-                    Transitional movements;
+                    <svg class="content-list__item-image">
+                        <use href="img/lotus-list.svg#lotus-icon"></use>
+                    </svg>
+                    <p class="content-list__item-text">Transitional movements;</p>
                 </li>
                 <li class="content-list__item">
-                    <img class="content-list__item-image" src="img/lotus-icon.svg" alt="lotus icon">
-                    How to breath properly.
+                    <svg class="content-list__item-image">
+                        <use href="img/lotus-list.svg#lotus-icon"></use>
+                    </svg>
+                    <p class="content-list__item-text">How to breath properly.</p>
                 </li>
             </ul>
             <a class="join-us__content-link button" href="#">SIGN UP</a>
