--- a/main-news.partial.html
+++ b/main-news.partial.html
@@ -1,38 +1,50 @@
 <section class="news">
-    <div class="news__main">
-        <p class="news__main-annotation annotation">NEWS</p>
-        <h2 class="news__main-title">News & Articles</h2>
-        <p class="news__main-subtitle">Read more about yoga practices and Eastern approaches to mental and physical health.</p>
-    </div>
-    <div class="news__container">
-        <img class="news__container-image" src="img/woman-in-triangle-pose.png" alt="woman perform triangle pose">
-    </div>
-    <div class="news__list">
-        <div class="news__list-item news__item">
-            <p class="news__item-date">EDUCATE | 12.06.2022</p>
-            <h2 class="news__item-title">Hatha Yoga: Myths and Reality</h2>
-            <p class="news__item-text">
-                Hatha yoga, translated from Sanskrit, means the following: 
-                Ha and Tha are two primordial energy flows that are opposite in quality and, 
-                interacting with each other, create the whole diversity of the manifested being...
-            </p>
-            <a class="news__item-link" href="#">READ MORE</a>
+    <div class="container">
+        <div class="news__main">
+            <p class="news__main-annotation annotation">NEWS</p>
+            <h2 class="news__main-title">News & Articles</h2>
+            <p class="news__main-subtitle subtitle">Read more about yoga practices and Eastern approaches to mental and physical
+                health.</p>
         </div>
-        <div class="news__list-item">
-            <img class="news__item-image" src="img/news/spine-health.png" alt="woman in lotus pose lay her corp forward">
-            <h2 class="news__item-title">Yoga for Spine Health</h2>
-            <p class="news__item-text">
-                85% of the world's inhabitants suffer from osteochondrosis. 
-                Regrettably, the main reason for such diseases is better living conditions.</p>
-            <a class="news__item-link" href="#">READ MORE</a>
-        </div>
-        <div class="news__list-item">
-            <img class="news__item-image" src="img/news/padmasana.png" alt="photo of Budha statue">
-            <h2 class="news__item-title">Padmasana — Lotus Pose</h2>
-            <p class="news__item-text">
-                When we say "yoga," we usually imagine a stern hermit and ascetic, 
-                sitting in a lotus position with a straight back and a stone face.</p>
-            <a class="news__item-link" href="#">READ MORE</a>
+        <div class="news__content">
+            <div class="news__container">
+                <img class="news__container-image" src="img/woman-in-triangle-pose.png"
+                    alt="woman perform triangle pose">
+            </div>
+            <div class="news__list">
+                <div class="news__list-item news__list-item-content">
+                    <p class="news__item-date annotation">EDUCATE | 12.06.2022</p>
+                    <h2 class="news__item-title">Hatha Yoga: Myths and Reality</h2>
+                    <p class="news__item-text">
+                        Hatha yoga, translated from Sanskrit, means the following:
+                        Ha and Tha are two primordial energy flows that are opposite in quality and,
+                        interacting with each other, create the whole diversity of the manifested being...
+                    </p>
+                    <a class="news__item-link" href="#">READ MORE</a>
+                </div>
+                <hr class="news__list-line">
+                <div class="news__list-item">
+                    <img class="news__item-image" src="img/news/spine-health.png" alt="woman in lotus pose lay her corp forward">
+                    <div class="news__list-item-content">
+                        <h2 class="news__item-title">Yoga for Spine Health</h2>
+                        <p class="news__item-text">
+                            85% of the world's inhabitants suffer from osteochondrosis.
+                            Regrettably, the main reason for such diseases is better living conditions.</p>
+                        <a class="news__item-link" href="#">READ MORE</a>
+                    </div>
+                </div>
+                <hr class="news__list-line">
+                <div class="news__list-item">
+                    <img class="news__item-image" src="img/news/padmasana.png" alt="photo of Budha statue">
+                    <div class="news__list-item-content">
+                        <h2 class="news__item-title">Padmasana — Lotus Pose</h2>
+                        <p class="news__item-text">
+                            When we say "yoga," we usually imagine a stern hermit and ascetic,
+                            sitting in a lotus position with a straight back and a stone face.</p>
+                        <a class="news__item-link" href="#">READ MORE</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
