--- a/main-photos.partial.html
+++ b/main-photos.partial.html
@@ -1,7 +1,19 @@
 <section class="photos">
-    <img class="photos__photo" src="img/photos/photo1.png" alt="woman perform dhanurasana pose"></li>
-    <img class="photos__photo" src="img/photos/photo2.png" alt="woman join her hands infront of her chest"></li>
-    <img class="photos__photo" src="img/photos/photo3.png" alt="woman in downward facing dog pose with raised one leg up.png"></li>
-    <img class="photos__photo" src="img/photos/photo4.png" alt="woman in equestrian pose"></li>
-    <img class="photos__photo" src="img/photos/photo5.png" alt="two women in lotus pose talk to each other"></li>
+    <div class="container">
+        <div class="photos__container c1">
+            <img class="photos__photo" src="img/photos/photo1.png" alt="woman perform dhanurasana pose">
+        </div>
+        <div class="photos__container c2">
+            <img class="photos__photo" src="img/photos/photo2.png" alt="woman join her hands infront of her chest">
+        </div>
+        <div class="photos__container c3">
+            <img class="photos__photo" src="img/photos/photo3.png" alt="woman in downward facing dog pose with raised one leg up">
+        </div>
+        <div class="photos__container c4">
+            <img class="photos__photo" src="img/photos/photo4.png" alt="woman in equestrian pose">
+        </div>
+        <div class="photos__container c5">
+            <img class="photos__photo" src="img/photos/photo5.png" alt="two women in lotus pose talk to each other">
+        </div>
+    </div>
 </section>
