--- a/footer.partial.html
+++ b/footer.partial.html
@@ -1,26 +1,38 @@
 <footer class="footer">
     <div class="footer__main">
-        <img class="footer__main-logo" src="img/bottom-logo.svg" alt="logo with Atta script">
-        <h2 class="footer__main-title">Your Spiritual Heaven</h2>
-        <nav class="footer__main-menu footer__menu">
-            <a class="footer__menu-item" href="#">About</a>
-            <a class="footer__menu-item" href="#">Classes</a>
-            <a class="footer__menu-item" href="#">Schedule</a>
-            <a class="footer__menu-item" href="#">Pricing</a>
-            <a class="footer__menu-item" href="#">Contacts</a>
-        </nav>
-        <p class="footer__main-text">
-            Find balance and serenity in this hectic life through yoga practices in our studio. 
-            Heal your body and soul and become a healthier person.
-        </p>
+        <div class="container">
+            <img class="footer__main-logo" src="img/bottom-logo.svg" alt="logo with Atta script">
+            <h2 class="footer__main-title">Your Spiritual Heaven</h2>
+            <nav class="footer__main-menu footer__menu">
+                <a class="footer__menu-item" href="#">About</a>
+                <a class="footer__menu-item" href="#">Classes</a>
+                <a class="footer__menu-item" href="#">Schedule</a>
+                <a class="footer__menu-item" href="#">Pricing</a>
+                <a class="footer__menu-item" href="#">Contacts</a>
+            </nav>
+            <p class="footer__main-text">
+                Find balance and serenity in this hectic life through yoga practices in our studio.
+                Heal your body and soul and become a healthier person.
+            </p>
+        </div>
     </div>
     <div class="footer__bottom">
-        <article class="footer__bottom-links">
-            <a class="footer__bottom-link" href="https://facebook.com"><img src="img/social-icons.webp" alt="facebook icon"></a>
-            <a class="footer__bottom-link" href="https://instagram.com"><img src="img/social-icons.webp" alt="instagram icon"></a>
-            <a class="footer__bottom-link" href="https://youtube.com"><img src="img/social-icons.webp" alt="youtube icon"></a>
-            <a class="footer__bottom-link" href="https://twitter.com"><img src="img/social-icons.webp" alt="twitter icon"></a>
-        </article>
-        <p class="footer__bottom-copyright">© Created by | All rights Reserved</p>
+        <div class="container">
+            <article class="footer__bottom-links">
+                <a class="footer__bottom-link" href="https://facebook.com"><svg class="footer__bottom-social-icon">
+                        <use href="img/social-media/facebook.svg#facebook"></use>
+                    </svg></a>
+                <a class="footer__bottom-link" href="https://instagram.com"><svg class="footer__bottom-social-icon">
+                        <use href="img/social-media/instagram.svg#instagram"></use>
+                    </svg></a>
+                <a class="footer__bottom-link" href="https://youtube.com"><svg class="footer__bottom-social-icon">
+                        <use href="img/social-media/youtube.svg#youtube"></use>
+                    </svg></a>
+                <a class="footer__bottom-link" href="https://twitter.com"><svg class="footer__bottom-social-icon">
+                        <use href="img/social-media/twitter.svg#twitter"></use>
+                    </svg></a>
+            </article>
+            <p class="footer__bottom-copyright">© Created by | All rights Reserved</p>
+        </div>
     </div>
 </footer>
