--- a/main-about-us.partial.html
+++ b/main-about-us.partial.html
@@ -12,48 +12,43 @@
             </p>
         </div>
         <div class="about-us__content">
-            <h3 class="about-us__content-title">Our method of training is staying true to the Gurukula system.</h3>
-            <p class="about-us__content-text">
-                We offer a comprehensive inner adventure with the guarantee of high quality and personal touch.
-                Our retreats are the perfect way to unwind and relax in a friendly environment.
-            </p>
-            <p class="about-us__content-text">
-                At the Atta Yoga studio, we know that yoga is vital to remain grounded both physically
-                and mentally during hard times. We continue making yoga accessible to everyone, both in person and
-                online.
-                We offer a variety of classes and affordable payment options.
-            </p>
-            <div class="about-us__content-lists about-us__lists">
-                <div class="about-us__lists-item">
+            <div class="about-us__content-description">
+                <h3 class="about-us__content-title">Our method of training is staying true to the Gurukula system.</h3>
+                <p class="about-us__content-text">
+                    We offer a comprehensive inner adventure with the guarantee of high quality and personal touch.
+                    Our retreats are the perfect way to unwind and relax in a friendly environment.
+                </p>
+                <p class="about-us__content-text">
+                    At the Atta Yoga studio, we know that yoga is vital to remain grounded both physically
+                    and mentally during hard times. We continue making yoga accessible to everyone, both in person and
+                    online.
+                    We offer a variety of classes and affordable payment options.
+                </p>
+            </div>
+            <div class="about-us__content-lists">
+                <div class="about-us__content-list about-us__list">
                     <h4 class="about-us__list-title">YOGA TYPES</h4>
                     <hr class="about-us__list-line">
-                    <ul class="about-us__list">
+                    <ul class="about-us__list-items">
                         <li class="about-us__list-item"><span class="list-item-decoration">● </span>Yoga Basics</li>
                         <li class="about-us__list-item"><span class="list-item-decoration">● </span>Ashtanga Yoga</li>
                         <li class="about-us__list-item"><span class="list-item-decoration">● </span>Vinyasa Yoga</li>
                         <li class="about-us__list-item"><span class="list-item-decoration">● </span>Hatha Yoga</li>
                         <li class="about-us__list-item"><span class="list-item-decoration">● </span>Prenatal Yoga</li>
                         <li class="about-us__list-item"><span class="list-item-decoration">● </span>Yin Yoga</li>
-                        <li class="about-us__list-item"><span class="list-item-decoration">● </span>Meditation Classes
-                        </li>
+                        <li class="about-us__list-item"><span class="list-item-decoration">● </span>Meditation Classes</li>
                     </ul>
                 </div>
-                <div class="about-us__lists-item">
+                <div class="about-us__content-list about-us__list">
                     <h4 class="about-us__list-title">CONDITIONS</h4>
                     <hr class="about-us__list-line">
-                    <ul class="about-us__list">
-                        <li class="about-us__list-item"><span class="list-item-decoration">● </span>Stress + Mental
-                            Health</li>
-                        <li class="about-us__list-item"><span class="list-item-decoration">● </span>Digestive Conditions
-                        </li>
-                        <li class="about-us__list-item"><span class="list-item-decoration">● </span>Back Pain, Neck Pain
-                        </li>
-                        <li class="about-us__list-item"><span class="list-item-decoration">● </span>Post-Surgical
-                            Support</li>
-                        <li class="about-us__list-item"><span class="list-item-decoration">● </span>Migraines, Headaches
-                        </li>
-                        <li class="about-us__list-item"><span class="list-item-decoration">● </span>Reproductive Health
-                        </li>
+                    <ul class="about-us__list-items">
+                        <li class="about-us__list-item"><span class="list-item-decoration">● </span>Stress + Mental Health</li>
+                        <li class="about-us__list-item"><span class="list-item-decoration">● </span>Digestive Conditions</li>
+                        <li class="about-us__list-item"><span class="list-item-decoration">● </span>Back Pain, Neck Pain</li>
+                        <li class="about-us__list-item"><span class="list-item-decoration">● </span>Post-Surgical Support</li>
+                        <li class="about-us__list-item"><span class="list-item-decoration">● </span>Migraines, Headaches</li>
+                        <li class="about-us__list-item"><span class="list-item-decoration">● </span>Reproductive Health</li>
                         <li class="about-us__list-item"><span class="list-item-decoration">● </span>Depression</li>
                     </ul>
                 </div>
