--- a/main-teacher-training.partial.html
+++ b/main-teacher-training.partial.html
@@ -1,23 +1,25 @@
 <section class="teacher">
-    <div class="teacher__container">
-        <img class="teacher__container-image" src="img/woman-in-boat-pose.png" alt="woman perform boat pose">
-    </div>
-    <div class="teacher__content">
-        <p class="teacher__content-annotation annotation">TEACHER TRAINING</p>
-        <h2 class="teacher__content-title">Become a Teacher or Just Improve Your Practice</h2>
-        <p class="teacher__content-subtitle">We offer classes for all skill levels.</p>
-        <p class="teacher__content-text">
-            Based on the tradition of authentic ancestors, our program is aimed 
-            at bringing yoga back to its true home as an alive art and as a comprehensive way to revival.
-        </p>
-        <p class="teacher__content-text">
-            We are highly experienced teachers committed to providing a clear education while 
-            enabling you to reveal your true abilities and potential.
-        </p>
-        <p class="teacher__content-text">
-            You can practice yoga for your own development or become an instructor after mastering all 
-            levels. We offer vast opportunities for professional training of future yoga coaches.
-        </p>
-        <a class="teacher__content-link button" href="#">FIND TRAINING</a>
+    <div class="container">
+        <div class="teacher__photo-container">
+            <img class="teacher__photo" src="img/woman-in-boat-pose.png" alt="woman perform boat pose">
+        </div>
+        <div class="teacher__content">
+            <p class="teacher__content-annotation annotation">TEACHER TRAINING</p>
+            <h2 class="teacher__content-title">Become a Teacher or Just Improve Your Practice</h2>
+            <p class="teacher__content-subtitle subtitle">We offer classes for all skill levels.</p>
+            <p class="teacher__content-text">
+                Based on the tradition of authentic ancestors, our program is aimed
+                at bringing yoga back to its true home as an alive art and as a comprehensive way to revival.
+            </p>
+            <p class="teacher__content-text">
+                We are highly experienced teachers committed to providing a clear education while
+                enabling you to reveal your true abilities and potential.
+            </p>
+            <p class="teacher__content-text">
+                You can practice yoga for your own development or become an instructor after mastering all
+                levels. We offer vast opportunities for professional training of future yoga coaches.
+            </p>
+            <a class="teacher__content-link button" href="#">FIND TRAINING</a>
+        </div>
     </div>
 </section>
