--- a/main-transform-yourself.partial.html
+++ b/main-transform-yourself.partial.html
@@ -1,8 +1,10 @@
 <section class="transform-yourself">
-    <div class="transform-yourself__container">
-        <img class="transform-yourself__container-image" src="img/lotus-icon.svg" alt="lotus icon">
-        <h2 class="transform-yourself__container-title">Transform Your Body, Mind, and Life Today!</h2>
-        <p class="transform-yourself__container-text">Transform Your Body, Mind, and Life Today!</p>
-        <a class="transform-yourself__container-link button" href="#">JOIN US NOW</a>
+    <div class="container">
+        <div class="transform-yourself__container">
+            <img class="transform-yourself__container-image" src="img/lotus-icon.svg" alt="lotus icon">
+            <h2 class="transform-yourself__container-title">Transform Your Body, Mind, and Life Today!</h2>
+            <p class="transform-yourself__container-text subtitle">Yoga is both a physical and spiritual practice that will help you progress in your life.</p>
+            <a class="transform-yourself__container-link button" href="#">JOIN US NOW</a>
+        </div>
     </div>
 </section>
