make header responsive

--- a/main-testimonials.partial.html
+++ b/main-testimonials.partial.html
@@ -6,6 +6,7 @@
             <p class="testimonials__main-subtitle subtitle">We appreciate your warm words and thoughts.</p>
         </div>
         <div class="testimonials__content">
+            <!-- Bootstrap implemented code start-->
             <div id="testimonials__carousel" class="testimonials__content-carousel carousel slide">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
@@ -60,6 +61,7 @@
                     </svg>
                 </button>
             </div>
+            <!-- Bootstrap code end-->
         </div>
     </div>
 </section>
