--- a/header.partial.html
+++ b/header.partial.html
@@ -3,15 +3,22 @@
         <div class="header__logo">
             <img class="header__logo-image" src="img/logo-image.svg" alt="logo with lotus and name of site">
         </div>
+        <a href="#" class="header__menu-btn">
+            <span class="header__nav-icon"></span>
+        </a>
+        <div class="header__responsive-items">
             <nav class="header__menu">
-                <a class="header__menu-item" href="#">About</a>
-                <a class="header__menu-item" href="#">Classes</a>
-                <a class="header__menu-item" href="#">Pricing</a>
-                <a class="header__menu-item" href="#">Schedule</a>
-                <a class="header__menu-item" href="#">Contacts</a>
+                <ul class="header__menu-list">
+                    <li class="header__menu-item"><a href="#">About</a></li>
+                    <li class="header__menu-item"><a href="#">Classes</a></li>
+                    <li class="header__menu-item"><a href="#">Pricing</a></li>
+                    <li class="header__menu-item"><a href="#">Schedule</a></li>
+                    <li class="header__menu-item"><a href="#">Contacts</a></li>
+                </ul>
             </nav>
             <div class="header__phone">
                 <p>☎ <span class="header__phone-number">+1 (234) 567 89 00</span></p>
             </div>
+        </div>   
     </div>
 </header>
