--- a/header.partial.html
+++ b/header.partial.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="container">
         <div class="header__logo">
-            <img class="header__logo-image" src="img/logo-image.svg" alt="logo with lotus and name of site">
+            <a href="index.html"><img class="header__logo-image" src="img/logo-image.svg" alt="logo with lotus and name of site"></a>
         </div>
         <a href="#" class="header__menu-btn">
             <span class="header__nav-icon"></span>
@@ -9,9 +9,9 @@
         <div class="header__responsive-items">
             <nav class="header__menu">
                 <ul class="header__menu-list">
-                    <li class="header__menu-item"><a href="#">About</a></li>
-                    <li class="header__menu-item"><a href="#">Classes</a></li>
-                    <li class="header__menu-item"><a href="#">Pricing</a></li>
+                    <li class="header__menu-item"><a href="#about">About</a></li>
+                    <li class="header__menu-item"><a href="#classes">Classes</a></li>
+                    <li class="header__menu-item"><a href="#pricing">Pricing</a></li>
                     <li class="header__menu-item"><a href="#">Schedule</a></li>
                     <li class="header__menu-item"><a href="#">Contacts</a></li>
                 </ul>
