--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <section data-include="main-yoga-is-answer.partial.html"></section>
         <section data-include="main-classes.partial.html"></section>
         <section data-include="main-transform-yourself.partial.html"></section>
-        <section data-include="main-teacher-training.partial.html"></section>
+        <!--section data-include="main-teacher-training.partial.html"></section-->
         <section data-include="main-pricing.partial.html"></section>
         <section data-include="main-photos.partial.html"></section>
         <section data-include="main-testimonials.partial.html"></section>
-        <section data-include="main-special-offer.partial.html"></section>
+        <!--section data-include="main-special-offer.partial.html"></section-->
         <section data-include="main-news.partial.html"></section>
     </main>
     <footer data-include="footer.partial.html"></footer>
