--- a/main-join-us.partial.html
+++ b/main-join-us.partial.html
@@ -30,13 +30,22 @@
             </ul>
             <a class="join-us__content-link button" href="#">SIGN UP</a>
         </div>
-        <div class="join-us__carousel">
-            <img class="join-us__carousel-photo" src="img/woman-in-shoulder-stand-pose.png"
-                alt="woman make shoulder stand pose while another woman help her holding legs">
-            <img class="join-us__carousel-photo" src="img/woman-hold-hands-between-her-scapulas.png"
-                alt="woman sitting on the floor and join her hands berween her woman-hold-hands-between-her-scapulas">
-            <img class="join-us__carousel-photo" src="img/group-of-women-in-triangle-pose.png"
-                alt="three women perform triangle pose">
+        <div class="join-us__carousel-container">
+            <div class="join-us__carousel">
+                <button class="join-us__button button-prev">
+                    <svg class="join-us__carousel-button">
+                        <use href="img/arrow-prev.svg#prev"></use>
+                    </svg>
+                </button>
+                <div class="join-us__carousel-slide">
+
+                </div>
+                <button class="join-us__button button-next">
+                    <svg class="join-us__carousel-button">
+                        <use href="img/arrow-next.svg#next"></use>
+                    </svg>
+                </button>
+            </div>
         </div>
     </div>
 
