--- a/main-pricing.partial.html
+++ b/main-pricing.partial.html
@@ -1,4 +1,4 @@
-<section class="pricing">
+<section class="pricing" id="pricing">
     <div class="container">
         <div class="pricing__main">
             <p class="pricing__main-annotation annotation">PRICING</p>
@@ -7,42 +7,7 @@
                 memberships.</p>
         </div>
         <div class="pricing__content">
-            <div class="pricing__content-item pricing__item">
-                <img class="pricing__item-image" src="img/yoga-pose-icons/monthly-membership.svg" alt="yoga pose icon">
-                <h2 class="pricing__item-title">Monthly Membership</h2>
-                <p class="pricing__item-text">Get your monthly membership and practice yoga without limits.</p>
-                <ul class="pricing__item-list list__membership">
-                    <li class="list__membership-item">•<span class="list-item"> 9-Month Unlimited </span>$1200 •</li>
-                    <li class="list__membership-item">•<span class="list-item"> 6-Month Unlimited </span>$600 •</li>
-                    <li class="list__membership-item">•<span class="list-item"> 3-Month Unlimited </span>$350 •</li>
-                    <li class="list__membership-item">•<span class="list-item"> 1-Month Unlimited </span>$120 •</li>
-                </ul>
-                <a class="pricing__item-link button" href="#">JOIN US NOW</a>
-            </div>
-            <div class="pricing__content-item pricing__item">
-                <img class="pricing__item-image" src="img/yoga-pose-icons/class-passes.svg" alt="yoga pose icon">
-                <h2 class="pricing__item-title">Class Passes</h2>
-                <p class="pricing__item-text">Choose the number of sessions you need and use them within 3 months.</p>
-                <ul class="pricing__item-list list__passes">
-                    <li class="list__passes-item">•<span class="list-item"> 1 Class </span>$80 •</li>
-                    <li class="list__passes-item">•<span class="list-item"> 5 Classes </span>$125 •</li>
-                    <li class="list__passes-item">•<span class="list-item"> 7 Classes </span>$150 •</li>
-                    <li class="list__passes-item">•<span class="list-item"> 10 Classes </span>$250 •</li>
-                </ul>
-                <a class="pricing__item-link button" href="#">JOIN US NOW</a>
-            </div>
-            <div class="pricing__content-item pricing__item">
-                <img class="pricing__item-image" src="img/yoga-pose-icons/online-classes.svg" alt="yoga pose icon">
-                <h2 class="pricing__item-title">Online Classes</h2>
-                <p class="pricing__item-text">Practice yoga online from anywhere in the world with our coaches.</p>
-                <ul class="pricing__item-list list__online">
-                    <li class="list__online-item">•<span class="list-item"> 1 Class </span>$70 •</li>
-                    <li class="list__online-item">•<span class="list-item"> 5 Classes </span>$100 •</li>
-                    <li class="list__online-item">•<span class="list-item"> Private Lesson </span>$90 •</li>
-                    <li class="list__online-item">•<span class="list-item"> Monthly </span>$120 •</li>
-                </ul>
-                <a class="pricing__item-link button" href="#">JOIN US NOW</a>
-            </div>
+            
         </div>
     </div>
 </section>
