--- a/footer.partial.html
+++ b/footer.partial.html
@@ -4,10 +4,10 @@
             <img class="footer__main-logo" src="img/bottom-logo.svg" alt="logo with Atta script">
             <h2 class="footer__main-title">Your Spiritual Heaven</h2>
             <nav class="footer__main-menu footer__menu">
-                <a class="footer__menu-item" href="#">About</a>
-                <a class="footer__menu-item" href="#">Classes</a>
+                <a class="footer__menu-item" href="#about">About</a>
+                <a class="footer__menu-item" href="#classes">Classes</a>
                 <a class="footer__menu-item" href="#">Schedule</a>
-                <a class="footer__menu-item" href="#">Pricing</a>
+                <a class="footer__menu-item" href="#pricing">Pricing</a>
                 <a class="footer__menu-item" href="#">Contacts</a>
             </nav>
             <p class="footer__main-text">
