--- a/main-about-us.partial.html
+++ b/main-about-us.partial.html
@@ -1,4 +1,4 @@
-<section class="about-us">
+<section class="about-us" id="about">
     <div class="container">
         <div class="about-us__main">
             <div class="about-us__main-header about-header">
